# weavscope

./: .gitignore  LICENSE  LLM.txt  README.md  debug_weaviate.py  pyproject.toml
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTE.md
mcp/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  mcpize.yaml  pyproject.toml
mcp/.cursor/: rules
mcp/scripts/: post-init.py
mcp/src/client/: client.py  integration.py  url.py  weaviate_doc_client.py
mcp/src/knowledgebase/: __init__.py  base.py  documentation.py  examples.py  installation.py
mcp/src/my_mcp_server/: __init__.py  server.py
mcp/src/server/: server.py  tools.py
mcp/tests/: conftest.py  test_tools.py
tests/: .gitignore  test_store.py
weavscope/: __init__.py
weavscope/config/: __init__.py  settings.py
weavscope/core/: batch.py  connection.py  providers.py  query.py  store.py
weavscope/utils/: exceptions.py  logging.py  uuid.py
