[project]
name = "weavscope"
version = "0.1.1"
license = { text = "MIT" }
description = "A clean, multi-tenant Weaviate wrapper for isolated data management."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
authors = [
    { name = "Tahcin Ul Karim (Mycin)", email = "mycin.mit@gmail.com" }
]
keywords = ["weaviate", "vector-database", "multi-tenancy", "search"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "weaviate-client[agents]>=4.20.4",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weavscope"]

[dependency-groups]
dev = [
    "build>=1.4.2",
    "twine>=6.2.0",
]

[tool.hatch.build]
exclude = [
  "/tests",
  "/docs",
  "/assets",
  "/mcp",
  "*.lock",
  "*.txt"
]

[project.urls]
Homepage = "https://github.com/mmycin/weavscope"
Repository = "https://github.com/mmycin/weavscope"
Issues = "https://github.com/mmycin/weavscope/issues"
