[project]
name = "my-mcp-server"
version = "1.0.0"
description = "MCP server created with MCPize"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["fastmcp>=2.13,<3", "rich>=14.0"]

[project.urls]
Repository = "https://github.com/username/my-mcp-server"
Documentation = "https://mcpize.com/docs"

[project.scripts]
my-mcp-server = "my_mcp_server.server:main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
